# interlace

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  dev  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/roadmap/: IMPLEMENTATION_STATUS.md  OUTSTANDING_TASKS.md  ROADMAP.md
examples/: README.md
examples/api/: README.md  config.yaml  pyproject.toml  run.py
examples/api/models/: __init__.py  quote_categories.sql  recipe_nutrition_summary.sql  sources.py  transformations.py  transformations.sql  user_demographics.sql
examples/basic/: README.md  config.yaml  pyproject.toml
examples/basic/models/: sources.py  transformations.py
examples/comprehensive/: README.md  config.yaml  pyproject.toml
examples/comprehensive/migrations/: 001_initial_schema.sql  002_add_customer_segment.sql  003_add_order_metadata.sql  004_error.sql
examples/comprehensive/models/: 01_sources.py  02_transformations.py  03_sql_models.sql
examples/sftp/: README.md  config.yaml  pyproject.toml  run_sync_once.py
examples/tpcdi/: .gitignore  README.md  config.dev.yaml  config.yaml  generate_data.py  pyproject.toml  run.py
examples/tpcdi/models/sources/: __init__.py  customer_source.py  reference_source.py  security_source.py  trade_source.py
examples/tpcdi/models/staging/: __init__.py  customer_staging.py  security_staging.py  trade_staging.py
examples/tpcdi/models/warehouse/: __init__.py  aggregated_metrics.py  dim_customer.py  fact_transaction.py
examples/tpcds/: README.md  config.yaml  generate_queries.py  pyproject.toml  run.py
examples/tpcds/models/tpcds/: tpcds_data.py  tpcds_q01.sql  tpcds_q02.sql  tpcds_q03.sql  tpcds_q04.sql  tpcds_q05.sql  tpcds_q06.sql  tpcds_q07.sql  tpcds_q08.sql  tpcds_q09.sql  tpcds_q10.sql  tpcds_q11.sql  tpcds_q12.sql  tpcds_q13.sql  tpcds_q14.sql  tpcds_q15.sql  tpcds_q16.sql  tpcds_q17.sql  tpcds_q18.sql  tpcds_q19.sql  tpcds_q20.sql  tpcds_q21.sql  tpcds_q22.sql  tpcds_q23.sql  tpcds_q24.sql  tpcds_q25.sql  tpcds_q26.sql  tpcds_q27.sql  tpcds_q28.sql  tpcds_q29.sql  tpcds_q30.sql  tpcds_q31.sql  tpcds_q32.sql  tpcds_q33.sql  tpcds_q34.sql  tpcds_q35.sql  tpcds_q36.sql  tpcds_q37.sql  tpcds_q38.sql  tpcds_q39.sql  (+60 more)
examples/tpch/: .gitignore  README.md  config.yaml  pyproject.toml  run.py
examples/tpch/models/tpch/: tpch_data.py  tpch_q01.sql  tpch_q02.sql  tpch_q03.sql  tpch_q04.sql  tpch_q05.sql  tpch_q06.sql  tpch_q07.sql  tpch_q08.sql  tpch_q09.sql  tpch_q10.sql  tpch_q11.sql  tpch_q12.sql  tpch_q13.sql  tpch_q14.sql  tpch_q15.sql  tpch_q16.sql  tpch_q17.sql  tpch_q18.sql  tpch_q19.sql  tpch_q20.sql  tpch_q21.sql  tpch_q22.sql
scripts/: build-ui.sh
src/interlace/: __init__.py  exceptions.py  testing.py
src/interlace/cli/: __init__.py  config.py  info.py  init.py  lineage.py  main.py  plan.py  promote.py  run.py  schema.py  serve.py  ui.py
src/interlace/config/: __init__.py  loader.py  resolver.py  singleton.py
src/interlace/connections/: __init__.py  base.py  duckdb.py  filesystem.py  ibis_generic.py  manager.py  postgres.py  s3.py  sftp.py  storage.py
src/interlace/core/: __init__.py  api.py  context.py  dependencies.py  executor.py  flow.py  impact.py  initialization.py  model.py  state.py  stream.py  types.py
src/interlace/core/execution/: __init__.py  change_detector.py  config.py  connection_manager.py  data_converter.py  dependency_loader.py  execution_orchestrator.py  materialization_manager.py  model_executor.py  schema_manager.py
src/interlace/core/retry/: __init__.py  circuit_breaker.py  dlq.py  manager.py  policy.py
src/interlace/export/: __init__.py  base.py  csv_exporter.py  json_exporter.py  parquet_exporter.py
src/interlace/lineage/: __init__.py  extractor.py  ibis_extractor.py  sql_extractor.py
src/interlace/materialization/: __init__.py  base.py  ephemeral.py  table.py  view.py
src/interlace/migrations/: __init__.py  cli.py  runner.py  utils.py
src/interlace/observability/: __init__.py  metrics.py  structured_logging.py  tracing.py
src/interlace/processors/: __init__.py  pgp.py  registry.py
src/interlace/quality/: __init__.py  base.py  runner.py
src/interlace/quality/checks/: __init__.py  accepted_values.py  expression.py  freshness.py  not_null.py  row_count.py  unique.py
src/interlace/schema/: __init__.py  evolution.py  modes.py  tracking.py  validation.py
src/interlace/service/: __init__.py  cron_parser.py  server.py
src/interlace/service/api/: __init__.py  errors.py  events.py  openapi.yaml  routes.py
src/interlace/service/api/handlers/: __init__.py  docs.py  events.py  flows.py  graph.py  health.py  lineage.py  models.py  plan.py  runs.py  schema.py  streams.py
src/interlace/service/api/middleware/: __init__.py  auth.py  cors.py  error.py
src/interlace/service/static/: index.html  manifest.webmanifest
src/interlace/service/static/_app/: version.json
src/interlace/strategies/: __init__.py  append.py  base.py  merge_by_key.py  none.py  replace.py  scd_type_2.py
src/interlace/streaming/: __init__.py  bridge.py  router.py
src/interlace/streaming/adapters/: __init__.py  base.py  kafka.py  memory.py  rabbitmq.py  redis.py  webhook.py
src/interlace/sync/: __init__.py  manifest.py  sftp_sync.py  types.py
src/interlace/utils/: __init__.py  api.py  async_utils.py  discovery.py  display.py  hashing.py  logging.py  monitoring.py  schema_utils.py  sql_escape.py  table_utils.py
tests/: __init__.py  test_api.py  test_auth_middleware.py  test_backfill.py  test_cli.py  test_config.py  test_connections.py  test_connections_generic.py  test_core.py  test_edge_cases_connections.py  test_edge_cases_core.py  test_edge_cases_strategies.py  test_edge_cases_utils.py  test_exceptions.py  test_executor.py  test_integration.py  test_integration_examples.py  test_materialization.py  test_observability.py  test_quality.py  test_quality_integration.py  test_retry.py  test_scd_type_2.py  test_scheduler.py  test_schema_modes.py  test_state_store.py  test_strategies.py  test_streaming.py  test_testing_framework.py
web/: index.html
(+14 files in other folders)
