[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interlace"
version = "0.1.2"
description = "A modern, Python/SQL-first data orchestration & pipeline framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Mark", email="mark@interlace.sh"}
]
keywords = ["data", "pipeline", "orchestration", "transformation", "etl", "reverse-etl", "dbt", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL"
]

dependencies = [
    "typer>=0.9.0,<1.0",
    "rich>=13.0.0,<15.0",
    "pyyaml>=6.0,<7.0",
    "duckdb>=0.10.3,!=1.3.0",
    "ibis-framework[duckdb]>=12.0.0,<13.0",
    "psycopg>=3.1.0,<4.0",  # ibis 10+ postgres backend uses psycopg v3
    "boto3>=1.28.0,<2.0",
    "sqlglot>=24.0.0,<29.0",
    "aiohttp>=3.9.0,<4.0",
    "pandas>=2.0.0,<4.0",
    "asyncpg>=0.29.0,<1.0",
    "cachetools>=5.3.0,<8.0",
    "aiofiles>=23.2.0,<26.0",
    "psutil>=5.9.0,<8.0",
    "paramiko>=3.4.0,<5.0",
    "pgpy>=0.6.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=1.0.0,<2.0",
    "aioresponses>=0.7.6,<1.0",
    "black>=23.0,<27.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.5.0,<2.0",
]

[project.scripts]
interlace = "interlace.cli.main:main"

[project.entry-points."pytest11"]
interlace = "interlace.testing"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interlace = ["py.typed"]
"interlace.service" = [
    "static/**/*",
    "static/*",
]
"interlace.service.api" = [
    "openapi.yaml",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "ibis.*",
    "sqlglot.*",
    "boto3.*",
    "botocore.*",
    "paramiko.*",
    "psycopg.*",
    "pgpy.*",
    "aiohttp.*",
    "aiofiles.*",
    "psutil.*",
    "cachetools.*",
    "aioresponses.*",
    "yaml",
    "yaml.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/interlace"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, require database)",
    "slow: Slow tests (may take a long time)",
    "performance: Performance benchmarks",
    "requires_db: Tests that require database connection",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.workspace]
members = ["examples/*"]

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
    "types-cachetools>=6.2.0.20251022",
    "types-paramiko>=4.0.0.20250822",
    "types-pyyaml>=6.0.12.20250915",
]
